(test
 (name fuzz)
 (modules fuzz fuzz_http_date)
 (libraries http-date alcobar))

(rule
 (alias runtest)
 (enabled_if
  (<> %{profile} afl))
 (action
  (run %{exe:fuzz.exe})))

(rule
 (alias fuzz)
 (enabled_if
  (= %{profile} afl))
 (action
  (progn
   (run %{exe:fuzz.exe} --gen-corpus corpus)
   (run afl-fuzz -V 60 -i corpus -o _fuzz -- ./%{exe:fuzz.exe} @@))))
